# aoc

./: .gitignore  Cargo.toml  README.md
aoc_lib/: Cargo.toml
aoc_lib/src/: aoc_client.rs  lib.rs
aoc_lib/src/day/: mod.rs  partial.rs  solved.rs  unsolved.rs
aoc_lib/src/puzzle/: base.rs  input.rs  macros.rs  mod.rs  result.rs  solution.rs
aoc_lib/src/util/: duration.rs  mod.rs
aoc_lib/src/year/: day_map.rs  mod.rs  year.rs  years.rs
aoc_utils/: Cargo.toml
aoc_utils/src/: lib.rs  one_off.rs
aoc_utils/src/matrix/: distance.rs  entry.rs  matrix.rs  mod.rs
aoc_utils/src/matrix/ext/: find_all_connected.rs  mod.rs  parse.rs  try_yield.rs  util.rs
src/: cli.rs  main.rs  years.rs
src/core/: aoc_client.rs  input.rs  io.rs  mod.rs  puzzle.rs
src/core/year/: day.rs  mod.rs
src/tui/: mod.rs  select.rs  util.rs
src/util/: date.rs  err.rs  matrix.rs  mod.rs  num.rs
src/util/matrix/: common.rs  matrix.rs  mod.rs
src/util/matrix/ext/: find_all_connected.rs  mod.rs  try_yield.rs  util.rs
src/y2024/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  mod.rs
src/years/: mod.rs
src/years/y2024/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
years/year-2024/: Cargo.toml
years/year-2024/src/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  lib.rs  prelude.rs
