[package]
name = "aoc"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["aoc_lib"]

[workspace.dependencies]
async-trait = "0.1"

reqwest = { version = "0.12" }

crossterm = "0.28"

seq-macro = "0.3"
chrono = "0.4"

[dependencies]
aoc_lib = { path = "aoc_lib" }

tokio = { version = "1.0", features = ["full"] }

inquire = "0.7"

itertools = "0.13"
rustc-hash = "2.1"
clap = { version = "4.5", features = ["derive"] }
regex = "1.11"
lazy-regex = "3.3"
