[package]
name = "aoc"
edition = "2021"

[workspace]
members = [
    "aoc_lib",
    "aoc_utils",
    "years/year-2024"
]

[workspace.dependencies]
aoc_lib = { path = "aoc_lib" }
aoc_utils = { path = "aoc_utils" }

anyhow = "1.0"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
aoc_lib.workspace = true
itertools = "0.13.0"

tokio = { version = "1.0", features = ["full"] }

year-2024 = { path = "years/year-2024" }
